argocd/base/resources/network-policies/n8n/allow-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-communication
  namespace: n8n
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    # Allow oauth2-proxy to communicate with n8n
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: n8n
